trunk/Archive2/57/effefb9eb1d8fe/output
main.cpp: In function 'int main()':
main.cpp:14:8: error: request for member 'operator()' is ambiguous
     f(1);
        ^
main.cpp:13:69: note: candidates are: main()::<lambda(const char*)>
     auto f = make_overload([](int i) { return i; }, [](const char* p) { return p; });
                                                                     ^
main.cpp:13:36: note:                 main()::<lambda(int)>
     auto f = make_overload([](int i) { return i; }, [](const char* p) { return p; });
                                    ^
